--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
         --accent-foreground: 220.9 39.3% 11%;
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 210 20% 98%;
-        --border: 220 13% 91%;
+        --border: oklch(21% 0.006 285.885);
         --input: 220 13% 91%;
         --ring: 224 71.4% 4.1%;
         --chart-1: 12 76% 61%;
@@ -67,7 +67,7 @@
         --accent-foreground: 210 20% 98%;
         --destructive: 0 62.8% 30.6%;
         --destructive-foreground: 210 20% 98%;
-        --border: 215 27.9% 16.9%;
+        --border: oklch(21% 0.006 285.885);
         --input: 215 27.9% 16.9%;
         --ring: 216 12.2% 83.9%;
         --chart-1: 220 70% 50%;
