--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,7 +97,7 @@ h6 {
 }
 
 .h2-heading-text {
-    @apply text-3xl sm:text-4xl lg:text-5xl font-bold leading-tight text-gray-900;
+    @apply text-3xl sm:text-4xl lg:text-5xl font-semibold text-zinc-800;
 }
 
 .heading-spacing {
