feat(component about): finalise about us

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,7 +93,7 @@ h6 {
 
 /* Custom classes */
 .p-heading-text {
-    @apply text-base sm:text-lg lg:text-xl text-zinc-600 font-normal leading-relaxed max-w-2xl mx-auto lg:mx-0;
+    @apply text-base sm:text-lg lg:text-xl text-zinc-600 font-normal leading-relaxed  mx-auto lg:mx-0;
 }
 
 .h2-heading-text {
